[package]
name = "purr-settle"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"


[dependencies]
bitcoin = {version = "0.32.2" , features = ["serde", "rand"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
secp256k1 = "0.29.0"
reqwest = "0.12.4"
serde_json = "1.0"
tokio = { version = "1.4.0", features = ["full"] }
k256 = "0.13.3"